# real-time-vector-demo

./: .gitignore  CHANGELOG.md  CMakeLists.txt  Makefile  README.md
configs/: demo.receiver.50010.json  demo.receiver.50011.json  demo.sender.json
docs/adr/: ADR-0001-20260322-mvp-architecture.md
src/app/cli/: main.cpp
src/app/gui/: main.cpp  main_window.cpp  main_window.h  preview_widget.cpp  preview_widget.h
src/core/config/: app_config.cpp  app_config.h
src/core/model/: geometry.h  scene_types.cpp  scene_types.h
src/core/network/: packet_codec.cpp  packet_codec.h  udp_device_receiver.cpp  udp_device_receiver.h  udp_device_sender.cpp  udp_device_sender.h
src/core/processing/: media_processor.cpp  media_processor.h  sender_engine.cpp  sender_engine.h
src/core/routing/: frame_router.cpp  frame_router.h
tests/: packet_codec_test.cpp
